fix chart tooltip z-index issues + only show env for deploy ref line

--- a/src/sentry/static/sentry/less/components/recharts.less
+++ b/src/sentry/static/sentry/less/components/recharts.less
@@ -9,3 +9,7 @@
 svg.recharts-surface {
     overflow: visible;
 }
+
+.recharts-responsive-container {
+    z-index: 1000;
+}
